--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -1,6 +1,7 @@
 Allow array types in config files
   Allow "size={200,150};" syntax for structures and arrays
-
+    Type of {x,y} is Tuple<X,Y>.
+    Give structures constructors taking a tuple of their member types
 
 Array::allocate() doesn't construct which is error prone. Figure out a better
   interface. Why doesn't it construct?
