--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -2,6 +2,13 @@ Allow array types in config files
   Allow "size={200,150};" syntax for structures and arrays
     Type of {x,y} is Tuple<X,Y>.
     Give structures constructors taking a tuple of their member types
+      When assigning a=b; can't just check if the types are the same, need to
+       check if TypeOf(b) is convertable to TypeOf(a).
+         Write a typeConvertable function
+
+Don't like having to define atoms in each program that uses Symbol
+  Define atoms for all programs in Symbol?
+  Use C++ classes instead of Symbols?
 
 Array::allocate() doesn't construct which is error prone. Figure out a better
   interface. Why doesn't it construct?
