Config file static typing

--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -1,4 +1,11 @@
-Do something with List so that we can iterate through it without allocations
+Change CurrentDirectory, RootDirectory and DriveRootDirectories to be Directory
+ members as well?
+
+Make a TemplateTypeConstructor class
+Type and TemplateTypeConstructor both inherit from TypeConstructor
+TypeConstructors are the things passed as arguments to TemplateTypeConstructors
+  to obtain types.
+Make a TypeConstructor class with a TypeConstructor::array()
 
 Allow array types in config files
   Allow "size={200,150};" syntax for structures and arrays
