Config file arrays

--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -1,7 +1,13 @@
+Fix up PartiallyInstantiatedImplementation and InstantiatedTypeImplementation
+  Shorter names?
+  Refactor out HashTable code
+  TemplateTypeConstructor::instantiate()
+    List::Iterator
+      Use this in other places where we don't need to keep the Array?
+
 Add TypeConstructor::array
 
-Make TemplateKind::Implementation a linked list so we can peel off first and
-  rest for instantiation
+Need an InstantiatedType deriving from Type
 
 Change CurrentDirectory, RootDirectory and DriveRootDirectories to be Directory
  members as well?
